# Desktop

./: .env  .env.example  .gitignore  BUILD_YOUR_OWN_TRADING_GUIDE.md  COINBASE_INTEGRATION.md  FEEDBACK_RESPONSE.md  FINAL_SUMMARY.md  FIXES_SUMMARY.md  GUI_IMPROVEMENTS.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_COMPLETE.md  Makefile  QUICKSTART_COINBASE.md  README.md  UI_IMPROVEMENTS_SUMMARY.md  VISUAL_IMPROVEMENTS_GUIDE.md  build.bat  build.json  build_all.py  build_exe.py  build_your_own_trading.py  chat.py  coinbase_adapter.py  config.py  crypto_trader.py  crypto_trader_gui.py  crypto_trading_suite_gui.py  data_validator.py  endpoint_validator.py  enhanced_crypto_trader.py  example_coinbase_integration.py  exchange_config.py  exchange_manager.py  latest update.py  latest update2.py  market_data_aggregator.py  market_data_collector.py  method_validator.py  method_validator.spec  performance_tracker.py  (+15 more)
.github/agents/: my-agent.md
config/: gui_config.json
