[build-system]
requires = ["setuptools>=45", "wheel", "build>=0.7.0"]
build-backend = "setuptools.build_meta"

[project]
name = "crypto-trading-suite"
version = "1.0.0"
description = "Comprehensive Crypto Trading Suite with Method Validation"
requires-python = ">=3.7"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    "ccxt>=2.0.0",
    "pandas>=1.5.0",
    "numpy>=1.21.0",
    "torch>=1.9.0",
    "scikit-learn>=1.0.0",
    "python-dotenv>=0.19.0",
    "requests>=2.26.0",
    "python-binance>=1.0.16",
    "ta>=0.10.1",
    "matplotlib>=3.4.3",
    "tensorboard>=2.8.0",
    "websockets>=10.0",
    "aiohttp>=3.8.0",
    "asyncio>=3.4.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-asyncio",
    "pytest-cov",
    "black",
    "isort",
    "mypy",
    "pyinstaller>=5.13.0"
]

[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
